--- a/VFMDesctop.csproj
+++ b/VFMDesctop.csproj
@@ -55,14 +55,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="ViewModels\Help\bindableCommand.cs" />
-    <Compile Include="ViewModels\Help\propertyChanged.cs" />
-    <Compile Include="ViewModels\Windows\MainWindowController.cs" />
+    <Compile Include="Models\Services\AuthService.cs" />
+    <Compile Include="Models\User.cs" />
+    <Compile Include="ViewModels\Help\BindableCommand.cs" />
+    <Compile Include="ViewModels\Help\NotifyPropertyChanged.cs" />
+    <Compile Include="ViewModels\Windows\MainWindowViewModel.cs" />
     <Compile Include="View\Pages\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\Pages\ProfilPage.xaml.cs">
-      <DependentUpon>ProfilPage.xaml</DependentUpon>
+    <Compile Include="View\Pages\ProfilePage.xaml.cs">
+      <DependentUpon>ProfilePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Windows\AuthorizationWindow.xaml.cs">
       <DependentUpon>AuthorizationWindow.xaml</DependentUpon>
@@ -78,7 +80,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\Pages\ProfilPage.xaml">
+    <Page Include="View\Pages\ProfilePage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -121,8 +123,15 @@
     <Resource Include="Images\Home.ico" />
     <Resource Include="Images\Profile.ico" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Resource Include="Images\Exit.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Reload.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Reload.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
