--- a/VFMDesctop.csproj
+++ b/VFMDesctop.csproj
@@ -62,6 +62,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Models\File.cs" />
+    <Compile Include="Models\Folder.cs" />
     <Compile Include="Models\Help\AFileSystemElement.cs" />
     <Compile Include="Models\Help\IFileSystemElement.cs" />
     <Compile Include="Models\JWT.cs" />
