Update web socket service

--- a/VFMDesctop.csproj
+++ b/VFMDesctop.csproj
@@ -61,12 +61,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\Interfaces\IFileSystemElement.cs" />
     <Compile Include="Models\Drive.cs" />
     <Compile Include="Models\File.cs" />
     <Compile Include="Models\Folder.cs" />
-    <Compile Include="Models\Help\AFileSystemElement.cs" />
+    <Compile Include="Models\AbsctactModels\AFileSystemElement.cs" />
+    <Compile Include="Models\ReceiveModels\Help\ReceiveStatus.cs" />
+    <Compile Include="Models\ReceiveModels\Receive.cs" />
+    <Compile Include="Models\ResponceModels\ResponceFileSystemElement.cs" />
     <Compile Include="Models\Services\ClientWebSocketService.cs" />
     <Compile Include="Models\Services\FileSystemService.cs" />
+    <Compile Include="Models\Services\JsonConverterServices.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="ViewModels\Help\BindableCommand.cs" />
     <Compile Include="ViewModels\Help\NotifyPropertyChanged.cs" />
