--- a/App.config
+++ b/App.config
@@ -18,7 +18,7 @@
   </runtime>
   <userSettings>
     <VFMDesctop.Properties.Settings>
-      <setting name="Json" serializeAs="String">
+      <setting name="CurrentTheme" serializeAs="String">
         <value />
       </setting>
     </VFMDesctop.Properties.Settings>
